js/src/jsapi-tests/binast/invalid/tests/labelled-continue-outside-while.js
foo: while (true) {
  continue foo;
}
